# adastra

./: .gitignore  CMakeLists.txt  main  softadastra_engine.cpp
include/Adastra/: Database.hpp  Exception.hpp  ThreadPool.hpp  adastra.hpp  softadastra.hpp  validator.hpp
src/: Database.cpp  ThreadPool.cpp  adastra.cpp  softadastra.cpp  validator.cpp
tests/: company_name.cpp  description.cpp  email_phone.cpp  test.cpp  test_validator.cpp
